--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,12 +11,16 @@ env:
 
 jobs:
   build:
-
+    
     runs-on: ubuntu-latest
-
+      
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: cargo build --verbose
+    - name: Build with nightly
+    uses: actions-rs/toolchain@v1.0.6
+    with:
+        toolchain: nightly
+        override: true  
+
     - name: Run tests
       run: cargo test --verbose
