--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,17 +10,13 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-    
+  
+  check:
     runs-on: ubuntu-latest
-      
     steps:
-    - uses: actions/checkout@v3
-    - name: Build with nightly
-    uses: actions-rs/toolchain@v1.0.6
-    with:
-        toolchain: nightly
-        override: true  
-
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v3
+      - name: Build with nightly
+        uses: actions-rs/toolchain@v1.0.6
+        with:
+            toolchain: nightly
+            override: true  
