--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Cargo Build & Test
 
 on:
   push:
@@ -8,15 +8,18 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  NIGHTLY_TOOLCHAIN: nightly
 
 jobs:
-  
-  check:
-    runs-on: ubuntu-latest
+  build_and_test:
+    name: Rust project - nightly
+    strategy:
+      matrix: 
+        os: [windows-latest, ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
-      - name: Build with nightly
-        uses: actions-rs/toolchain@v1.0.6
-        with:
-            toolchain: nightly
-            override: true  
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: cargo build --verbose
+      - run: cargo test --verbose
