--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix: 
         os: [windows-latest, ubuntu-latest, macos-latest]
+        toolchain: [nightly]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     steps:
